name:                taffybar-sni
version:             0.1.0.0
homepage:            https://github.com/IvanMalison/taffybar-sni-example
license:             BSD3
author:              Ivan Malison
maintainer:          IvanMalison@gmail.com
copyright:           Ivan Malison
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable taffybar-sni
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gi-gtk
                     , glib
                     , haskell-gi-base
                     , gtk3>=0.14.8
                     , gtk-sni-tray
                     , taffybar
  default-language:    Haskell2010
